--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
 
     <string name="app_name">Respect Schedule</string>
     <string name="data_start_semestr">Дата начала семестра</string>
-    <string name="settings_change_theme">Изменить тему приложения</string>
+    <string name="settings_change_theme">Сменить тему приложения</string>
     <string name="add">Добавить</string>
     <string name="close">Закрыть</string>
     <string name="educator">Преподаватель</string>
@@ -69,28 +69,42 @@
     <string name="delete_audience">Удалить аудиторию «%1$s»?</string>
     <string name="delete_educator">Удалить преподавателя «%1$s»?</string>
     <string name="delete_typelesson">Удалить тип предмета «%1$s»?</string>
-    <string name="ack">Подтвердить</string>
 
     <string name="clear_day">Очистить день</string>
     <string name="string_empty_lesson">Занятие отсутствует</string>
     <string name="string_time_one">13:10</string>
     <string name="string_time_two">14:00</string>
-    <string name="transfer">Отправить / получить расписание</string>
-    <string name="button_import">Импорт</string>
-    <string name="button_export">Экспорт</string>
-    <string name="title_transfer_data">Импорт / экспорт расписания</string>
+
+    <string name="button_share">Поделиться</string>
+    <string name="button_load">Загрузить</string>
+    <string name="button_save_file">Сохранить в файл</string>
+    <string name="dialog_button_edit">Сохранить</string>
+
+    <string name="title_transfer_data">Обменяться расписанием</string>
+    <string name="title_share_data">Отправить расписание</string>
+
+    <string name="success_save_file">Расписание успешно сохранено в файл</string>
+    <string name="error_save_file">Ошибка при сохранении файла</string>
+    <string name="success_share_schedule">Расписание успешно отправлено</string>
+    <string name="error_load_schedule">Ошибка загрузки расписания</string>
+    <string name="error_parse_share">Ошибка парсинга файла при отправке</string>
+    <string name="success_load_schedule">Расписание обновлено</string>
+    <string name="transfer_info_snackbar">Отправьте/загрузите файл с расписанием</string>
+
     <string name="feedback_developer">Обратная связь с разработчиком</string>
     <string name="string_email_developer">Электронная почта</string>
     <string name="string_tg_developer">Telegram</string>
     <string name="tg_developer">https://t.me/volkovmike</string>
     <string name="email_developer">mailto:mikhailvolkov2014–2014@ya.ru</string>
+
     <string name="title_edit_data">Редактор данных</string>
     <string name="title_calls">Расписание звонков</string>
+
     <string name="dialog_fragment_title_typelesson">Типы занятия</string>
     <string name="dialog_fragment_title_educator">Преподаватели</string>
     <string name="dialog_fragment_title_audience">Аудитории</string>
     <string name="dialog_fragment_title_subject">Предметы</string>
-    <string name="dialog_button_edit">Сохранить</string>
+
     <string name="title_edit_subject">Редактировать предмет</string>
     <string name="title_edit_audience">Редактировать аудиторию</string>
     <string name="title_edit_educator">Редактировать преподавателя</string>
@@ -108,16 +122,21 @@
     <string name="select_all">Все</string>
     <string name="current_day">Текущая дата</string>
     <string name="selectively_week">Выборочно</string>
+    <string name="error_load_database">Ошибка загрузки расписания</string>
+
     <string name="monday">Понедельник</string>
     <string name="tuesday">Вторник</string>
     <string name="wednesday">Среда</string>
     <string name="friday">Пятница</string>
     <string name="thuesday">Четверг</string>
     <string name="saturday">Суббота</string>
+
     <string name="title_dialog_rv_lessons">Выбор занятия</string>
     <string name="select_unevens">Нечетные</string>
     <string name="select_evens">Четные</string>
+
     <string name="timelesson">%1$s - %2$s</string>
+
     <string name="dialog_select_all">Отметить/очистить все</string>
     <string name="title_copy_lesson">Скопировать занятие</string>
     <string name="empty_list_selected_day">Добавьте занятие (день недели и время)</string>
@@ -130,4 +149,5 @@
     <string name="error_selected_week">Выберите минимум одну неделю</string>
     <string name="already_selected_lesson">Данное занятие уже выбрано</string>
     <string name="copy_week">Скопировать текущую в выбранные недели?</string>
+    <string name="calls_info_snack">Нажмите на время, чтобы изменить</string>
 </resources>
